Se agrega conferencias

--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -45,10 +45,10 @@
                 <span></span>
             </div>
             <nav class="navegacion-principal">
-                <a href="conferencia.html">Conferencia</a>
-                <a href="#">Calendario</a>
+                @Html.ActionLink("Conferencias","Conferencias","Home")
+                <a href="">Calendario</a>
                 <a href="">Invitados</a>
-                <a href="registro.html">Reservaciones</a>
+                <a href="">Reservaciones</a>
             </nav>
 
         </div>
