--- a/WebApplication1/Views/Home/Conferencias.cshtml
+++ b/WebApplication1/Views/Home/Conferencias.cshtml
@@ -79,7 +79,15 @@
         </div>
     </div>
 
+    <section class="seccion contenedor">
+        <h2>
+            La Mejor Conferencia de Diseño Web en español
+        </h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam obcaecati maiores vero pariatur laboriosam dignissimos debitis consequatur delectus provident officia magni sapiente quod error, fugiat sunt recusandae cupiditate autem quas?</p>
+    </section>
+
     <!--Seccion.contenedor-->
+
 
     <section class="seccion contenedor ">
         <h2>Galeria de fotos</h2>
@@ -155,7 +163,7 @@
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
-        window.ga = function() {
+        window.ga = function () {
             ga.q.push(arguments)
         };
         ga.q = [];
