Se corrige header de reservaciones y linkea de app

--- a/WebApplication1/Views/Home/Conferencias.cshtml
+++ b/WebApplication1/Views/Home/Conferencias.cshtml
@@ -70,10 +70,10 @@
                 <span></span>
             </div>
             <nav class="navegacion-principal">
-                <a href="#" class="activo">Conferencia</a>
-                <a href="#">Calendario</a>
+                @Html.ActionLink("Conferencias", "Conferencias", "Home")
+                <a href="">Calendario</a>
                 <a href="">Invitados</a>
-                <a href="registro.html">Reservaciones</a>
+                @Html.ActionLink("Reservaciones", "Reservaciones", "Home");
             </nav>
 
         </div>
