--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -48,7 +48,7 @@
                 @Html.ActionLink("Conferencias", "Conferencias", "Home")
                 <a href="">Calendario</a>
                 <a href="">Invitados</a>
-                @Html.ActionLink("Reservaciones", "Create", "Home");
+                @Html.ActionLink("Reservaciones", "Reservaciones", "Home");
             </nav>
 
         </div>
