create invitados view

--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -72,6 +72,7 @@
             <nav class="navegacion-principal">
                 @Html.ActionLink("Conferencias", "Conferencias", "Home")
                 <a href="">Calendario</a>
+                @Html.ActionLink("Invitdos", "Invitados", "Home");
                 <a href="">Invitados</a>
                 @Html.ActionLink("Reservaciones", "Reservaciones", "Home");
                 <a href="#"><i class="fas fa-shopping-cart"></i></a>
