--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -71,8 +71,8 @@
             </div>
             <nav class="navegacion-principal">
                 @Html.ActionLink("Conferencias", "Conferencias", "Home")
-                <a href="">Calendario</a>
-                @Html.ActionLink("Invitados", "Invitados", "Home");
+                @Html.ActionLink("Calendario", "Calendario", "Home")
+                <a href="">Invitados</a>
                 @Html.ActionLink("Reservaciones", "Reservaciones", "Home");
                 <a href="#"><i class="fas fa-shopping-cart"></i></a>
             </nav>
